****
News
****

- variable A may be declared as alias of variable B usign A@B syntax (very usefull for system procedures arguments)
- data-flow analysis in live value analysis

===========
6-Sep-2010
===========

- Raster Music Tracker module
- unused procedure detection

===========
3-Sep-2010
===========

- module system (Use keyword)
- very basic version of structures
- many bugs fixed
- projects page
- Little Fifteen game by Jakub Husak included (3 games developed in Atalan now!)

===========
24-Aug-2010
===========

- 16 bit multiplication
- inserting file/line references to output
- support for colorized output
- let the assembler generate .lst file too

===========
23-Aug-2010
===========

- rewritten lexer (fixes some parsing errors)

===========
21-Aug-2010
===========

- var.min, var.max built-in associated variables
- relational operators chains (10 < x < 30)

===========
16-Aug-2010
===========

- first version of type inferencing
- improved error reporting (displays text of line with error)
- comments with lines generated into .asm output
- static array bounds checking
- compiler can detect and report as error types not implemented by backend 
- unused labels are no longer generated into .asm source code
- improved block parsing 
- updated to Visual Studio 10
- fix: logical operators
- fix: exit label after loop was not skipped by optimizer when spilling at the end of loop

===========
07-Aug-2010
===========

- for loops now support variable ranges (for i:s-10..s+10 etc.)
- support for enums in array constants (also introduced type matching)
- support for byte multiplication and division
- new modulus operator MOD
- fixed problem with UNIX style line separators
- miscelaneous other fixes
- doc: reference now has index 
- doc: new loop example demonstrates differend kinds of loops

===========
05-Aug-2010
===========

- support for interrupts (DLI and VBI)
- assigning addresses to variables